[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Actor/ActorBase.gd" type="Script" id=1]
[ext_resource path="res://AbstractClasses/StateMachine.gd" type="Script" id=2]

[node name="ActorBase" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 400.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="StatesMachine" type="Node" parent="."]
script = ExtResource( 2 )
