[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/Actor/Robot/Babybot/BabyBot.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Move/TankMinionMove1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Move/TankMinionMove4.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Move/TankMinionMove3.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Attack/TankMinionAttack2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Move/TankMinionMove2.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Attack/TankMinionAttack3.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Attack/TankMinionAttack4.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Attack/TankMinionAttack5.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Attack/TankMinionAttack7.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Actor/Robot/Babybot/Tank/Sprite/Attack/TankMinionAttack6.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Actor/ActorBase.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "Attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Move",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 10 )

[node name="BabyTank" instance=ExtResource( 1 )]
z_index = 1
z_as_relative = false
script = ExtResource( 12 )
action_name_bubble = "Prout"

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
animation = "Idle"
playing = true
offset = Vector2( 10, -4 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 2 )
shape = SubResource( 2 )
